<resources>
    <string name="app_name">Trip Organizer</string>
    <string name="title_list_place">My Places to Visit</string>

    <string name="title_create_trip">Create a Trip</string>
    <string name="title_edit_trip">Modify a Trip</string>
    <string name="hint_city">City</string>

    <string name="label_date">Date</string>
    <string name="label_time">Time (Optional)</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="hint_date">JJ/MM/AAAA</string>
    <string name="hint_time">hh:mm</string>

    <string name="hint_place_title">Title</string>
    <string name="hint_place_desc">Description</string>
    <string name="hint_place_address">Address</string>
    <string name="hint_place_phone">Phone (Optional)</string>
    <string name="btn_place_open_maps">Open in Maps</string>
    <string name="btn_place_dial">Dial</string>
    <string name="btn_place_share">Share</string>
    <string name="btn_place_select_photo">Select Photo</string>
    <string name="btn_place_visited">Mark as Visited</string>
    <string name="btn_place_not_visited">Mark Not Visited</string>

    <string name="menu_add">Add</string>
    <string name="menu_settings">Music ON/OFF</string>
    <string name="menu_notice">Advance notice (7d/2d)</string>
    <string name="popup_notif7">Notification 7 days in advance</string>
    <string name="popup_notif2">Notification 2 days in advance</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_pick">Pick</string>
</resources>