<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_place_photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="712dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="724dp"
        android:text="@string/btn_place_select_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="804dp"
        android:ems="10"
        android:hint="@string/hint_place_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etm_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_place_address"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/etm_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etm_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_place_desc"
        app:layout_constraintBottom_toTopOf="@+id/et_date_place"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pick_time"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="380dp"
        android:text="@string/btn_pick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_hour_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/hint_time"
        app:layout_constraintBottom_toTopOf="@+id/et_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/label_date"
        app:layout_constraintBottom_toTopOf="@+id/et_date_place"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_dial"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="312dp"
        android:text="@string/btn_place_dial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_time"
        app:layout_constraintBottom_toTopOf="@+id/et_hour_place"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="180dp"
        android:text="@string/btn_place_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_visited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn_place_visited"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="232dp"
        android:text="@string/btn_place_open_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_date_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/hint_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/et_hour_place"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="72dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pick_date"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        android:text="@string/btn_pick"
        app:layout_constraintBottom_toTopOf="@+id/btn_pick_time"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="312dp"
        android:ems="10"
        android:hint="@string/hint_place_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>